# bad-term

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/Config/: ArgParser.cpp  ArgParser.hpp  Config.cpp  Config.hpp  ConfigDefinitions.hpp
src/Scene/: Scene.cpp  Scene.hpp  filter.cpp  filter.hpp
